# ILDPerformance

./: AUTHORS  CMakeLists.txt  Changelog.txt  README  README.md  release-notes.txt
.github/workflows/: key4hep.yml  linux.yml
FullAnalysis_DESY/: README
FullAnalysis_DESY/Analysis/: 2gauss_fit2.cc
FullAnalysis_DESY/SIM_n_RECO/: DDDiagnostics.xml  Diagnostics.xml  lctuple.xml  qsub_mokka.sh  reco_ilc.sh  runMarlinDiag.sh  runMokkaSimReco.sh  runSimReco.sh
JER/AnalysePerformance/: Jer.C  runEnergyRes.sh
JER/Sim/: changeXML.sh  ddsim_steering.py  run_ddsim.sub  sendJob.sh
JER/ddsim/: run-ddsim-uds  submit-ddsim-jobs
JER/include/: EnergyResolution.h
JER/scripts/: EnergyResolution.xml  README  pfoanalysis.xml
JER/src/: EnergyResolution.cc
PID/: README  README.md  run_all.sh
PID/include/: PIDTree.h
PID/macros/: PIDHelper.h  plotPIDEfficiency.C  plotPIDLike.C  plotPIDPurity.C  plotPIDs.C  plotdEdx.C
PID/plots/: MC_p_emuall.eps  MC_pt_emuall.eps  PDGs_pdg11_cut1.eps  PDGs_pdg11_cut1.ps  PDGs_pdg11_cut2.eps  PDGs_pdg11_cut2.ps  PDGs_pdg13_cut1.eps  PDGs_pdg13_cut1.ps  PDGs_pdg13_cut2.eps  PDGs_pdg13_cut2.ps  PDGs_pdg211_cut1.eps  PDGs_pdg211_cut1.ps  PDGs_pdg211_cut2.eps  PDGs_pdg211_cut2.ps  PDGs_pdg2212_cut1.eps  PDGs_pdg2212_cut1.ps  PDGs_pdg2212_cut2.eps  PDGs_pdg2212_cut2.ps  PDGs_pdg321_cut1.eps  PDGs_pdg321_cut1.ps  PDGs_pdg321_cut2.eps  PDGs_pdg321_cut2.ps  dEdxeffi_recolevel3_ivar1_icut5.eps  dEdxeffi_recolevel3_ivar1_icut5.ps  dEdxeffi_recolevel3_ivar5_icut2.eps  dEdxeffi_recolevel3_ivar5_icut2.ps  dEdxeffi_recolevel3_ivar5_icut7.eps  dEdxeffi_recolevel3_ivar5_icut7.ps  dEdxeffi_recolevel3_ivar5_icut8.eps  dEdxeffi_recolevel3_ivar5_icut8.ps  dEdxeffi_recolevel6_ivar1_icut5.eps  dEdxeffi_recolevel6_ivar1_icut5.ps  dEdxeffi_recolevel7_ivar1_icut1.eps  dEdxeffi_recolevel7_ivar1_icut1.ps  dEdxeffi_recolevel7_ivar1_icut5.eps  dEdxeffi_recolevel7_ivar1_icut5.ps  effi_allcharged_costheta.eps  effi_allneutral_costheta.eps  effi_ipdg0_recolevel1_ivar5.eps  effi_ipdg11_recolevel1_ivar5.eps  (+33 more)
PID/scripts/: PIDTree.xml
PID/src/: PIDTree.cc
TimeOfFlight/: Readme.md
TimeOfFlight/config/: ParticleTypes.cnf  PlottingSettings.cnf  Setup.cnf  TOFApproaches.cnf  TimeResolutions.cnf
TimeOfFlight/macros/: run_singleparticle.sh
TimeOfFlight/macros/creating_lctuples/: SetSteeringFile.py  run_singleparticle_lctuple.sh
TimeOfFlight/macros/plotting/: draw_tof_singleparticle.cpp  draw_tof_ttbar.cpp  run_singleparticle_plotting.sh  tof_helpers.cpp
TimeOfFlight/macros/reading_config/: ReadConfig.py  read_config.cpp
TimeOfFlight/macros/submitting_bird_jobs/: standard_bash_run.sh  standard_htcondor_steering.submit
TimeOfFlight/scripts/: template_lctuple_steering_singleparticle.py  template_lctuple_steering_ttbar.py
UdsAnalysis/: Readme.md
UdsAnalysis/scripts/: run-ddsim-uds  run-reco-uds  run-uds-performance  submit-qsub-ddsim-jobs  submit-qsub-full-jer-jobs  submit-qsub-reco-jobs
UdsAnalysis/src/: ILDPerformance_AnalyseUds.cc
UdsAnalysis/steer/: default-settings.conf  naf-settings.conf
WWZZSeparation/: README.md  input_config.sh  run_performance_check.sh
WWZZSeparation/plotting/: create_mjjmjjplots.cc
WWZZSeparation/processor/include/: EventInformation.h  (+3 more)
WWZZSeparation/scripts/: get_output_subdir.sh  initialize_ilcdirac.sh  link_local_files.sh  run_complete_analysis.sh  run_plotting.sh  run_sim_and_rec.sh
dEdX/: ReadMe.md  Readme.md
dEdX/include/: ILDStyle_Standalone.h  dEdxAnalyser.h
dEdX/main/: dEdxHistPlotter.cc
dEdX/src/: dEdxAnalyser.cc
dEdX/steer/: steer_example.xml
doc/: ReleaseNotes.md
kinfit/: README
kinfit/macros/: WW5CFit.root  WW5CFit_compare.C  ZH5CFit.root  ZH5CFit_OPAL.root  ZH5CFit_compare.C  ZHWW5CFit_compare.C  rootlogon.C
kinfit/scripts/: WW5CFit.xml  ZH5CFit.xml
pi0/: README
pi0/include/: pi0Tree.h
pi0/macros/: plotERes.C  plotEffi.C  rootlogon.C
pi0/scripts/: e1e1h_gg_qqqq_250  e2e2h_gg_qqqq_250  pi0Tree.xml
pi0/src/: pi0Tree.cc
singlePhotonVal/: CMakeLists.txt  README.md
singlePhotonVal/include/: validateDST_SinglePhoton.h
singlePhotonVal/scripts/: makePlots.py  validatePhoton.xml
singlePhotonVal/src/: validateDST_SinglePhoton.cc
stepLength/include/: StepLength.h
stepLength/script/: README.md  StepLength.xml
stepLength/src/: StepLength.cc
trackerHitCtr/: README.md
trackerHitCtr/include/: TrackerHitCounter.h
trackerHitCtr/src/: TrackerHitCounter.cc
trackerHitCtr/xml/: TrackerHitCounter.xml
tracking/: README
tracking/NewSimTest/: DDDiagnostics.xml  Diagnostics.xml  README  bbudsc_3evt_stdreco_dd4hep.xml  ddsim.py  gear_SimpleILD_DD4hep.xml  lcio_particle_gun.py  prepareWorkingFolders.sh  runNewSim.py  runNewSim.sh  run_refit_aidaTT.xml  run_sitracking.xml
tracking/include/: DDDiagnostics.h  Diagnostics.h  Residuals.h  Skim.h
tracking/macros/: BadTracks.C  ComparePulls.C  CompareResiduals.C  D0Resolution.C  D0ResolutionL5.C  D0Resolution_comp.C  Efficiency.C  Efficiency2D.C  EfficiencyL5.C  PResolution.C  PResolutionL5.C  PResolution_comp.C  PatRec.C  Plots.C  PtResolutionOne.C  Pulls.C  Residuals.C  Z0ResolutionL5.C  eff_comp.C  generate_monitor_plot.sh  mean.C  meanL5.C  sigma.C  sigmaL5.C
tracking/scripts/: Diagnostics.xml  GearOutput.xml  PatRec.sh  runAll.sh  runAnalysis.sh  runMarlin.sh  runMokka.sh  stdreco_tracking.xml
tracking/src/: DDDiagnostics.cc  Diagnostics.cc  Residuals.cc  Skim.cc
tracking/test/: DDDiagnostics.xml  DDDiagnostics_1D.xml  DDDiagnostics_2D.xml  Diagnostics_ILD_l5_v02_ttbar.xml  Diagnostics_ttbar.xml  README_Tracking.md  htc_job_singleMuon.sub  htc_job_ttbar.sub  lcio_particle_gun.py  prepareWorkingFolders.sh  run_ILD_l5_v02_singleMuon.sh  run_ILD_l5_v02_ttbar.sh  run_refit_aidaTT.xml  run_singleMuon.sh  run_ttbar.sh  submit_job.sh
validateSim/: CMakeLists.txt
validateSim/doc/: README
validateSim/include/: valStruct.h  validate.h  validateAuto.h  validatePilot.h
validateSim/src/: validate.cc  validateAuto.cc  validatePilot.cc
validateSim/test/: autoValidate.sh  my_ddsim_steer.py  plotallhits.C  plotauto.C  sim_and_check.sh
(+9 files in other folders)
